# sequent-core

./: sequent-core.cabal
examples/: Example.hs
src/: SequentCore.hs  SequentPlugin.hs
